--- a/.github/workflows/SimpleGoBuild.yml
+++ b/.github/workflows/SimpleGoBuild.yml
@@ -14,4 +14,7 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
-    - run: go run helloworld.go
+    - name: Install dependencies
+      run: go mod download
+    - name: Go Hello World
+      run: go run helloworld.go
