--- a/.github/workflows/SimpleGoBuild.yml
+++ b/.github/workflows/SimpleGoBuild.yml
@@ -14,7 +14,9 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
-    - name: Install dependencies
-      run: go mod download
+        cache-dependency-path: |
+               subdir/go.sum
+               tools/go.sum
+               
     - name: Go Hello World
       run: go run helloworld.go
