--- a/.github/workflows/SimpleGoBuild.yml
+++ b/.github/workflows/SimpleGoBuild.yml
@@ -1,20 +1,18 @@
 name: Simple Go Build
-
+ 
 on:
-  workflow_dispatch:
-
+  push:
+    branches:
+      - main
+ 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
     - name: Setup Go version
-      uses: actions/setup-go@v5
+      uses: actions/setup-go@v2
       with:
-        go-version: '1.20'
-        cache-dependency-path: |
-               subdir/go.sum
-               tools/go.sum
-               
-    - name: Go Hello World
-      run: go run helloworld.go
+        go-version: '1.15.1'
+    - run: go run helloworld.go   
+ 
