--- a/.github/workflows/deploy-envs.yml
+++ b/.github/workflows/deploy-envs.yml
@@ -1,13 +1,29 @@
+name: Evaluate PR
+
 on:
-  push:
-  
+  pull_request_target:
+ 
+
+permissions:
+  contents: read
+
+
 jobs:
-  setup:
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: Set debug 
-        id: set-debug-stage
-        run: echo "BUILD_STAGE=debug" >> $GITHUB_OUTPUT
-        
-      - name: Get stage
-        run: echo "The build stage is ${{ steps.set-debug-stage.outputs.BUILD_STAGE }}"
+    - uses: actions/checkout@v3
+      with:
+        ref: ${{ github.event.pull_request.head.sha }}
+
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+    - name: Build with Gradle
+      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      with:
+        arguments: build
